common grind tasks and travis options added

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,14 @@
 name: ml_tech
 description: Linter rules and common ci tasks for dart ml libraries
-version: 0.0.2
+version: 0.0.3
 author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_tech
 
 environment:
-  sdk: '>=2.0.0 <3.0.0'
+  sdk: '>=2.4.0 <3.0.0'
 
 dev_dependencies:
   pedantic: 1.1.0
+  coverage: ^0.13.2
+  grinder: ^0.8.3
+  grinder_coveralls: ^1.1.1
