--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,14 +1,15 @@
 name: ml_tech
 description: Linter rules and common ci tasks for dart ml libraries
-version: 0.0.4
+version: 0.0.5
 author: Ilia Gyrdymov <ilgyrd@gmail.com>
 homepage: https://github.com/gyrdym/ml_tech
 
 environment:
   sdk: '>=2.4.0 <3.0.0'
 
-dev_dependencies:
-  pedantic: 1.1.0
-  coverage: ^0.13.2
+dependencies:
   grinder: ^0.8.3
   grinder_coveralls: ^1.1.1
+
+dev_dependencies:
+  pedantic: 1.1.0
